--- a/_posts/2020-02-27-tpu.md
+++ b/_posts/2020-02-27-tpu.md
@@ -6,14 +6,8 @@ toc_sticky: true
 toc_label: "목차"
 use_math: true
 
-categories:
-  - TPU
-  - GPU
-  - Deep learning
-tags:
-  - TPU
-  - GPU
-  - Deep learning
+categories: TPU, GPU, Deep learning
+tags: TPU, GPU, Deep learning
 last_modified_at: 2020-02-27
 ---
 
