modify tags, categories

--- a/_posts/2020-02-27-tpu.md
+++ b/_posts/2020-02-27-tpu.md
@@ -6,8 +6,12 @@ toc_sticky: true
 toc_label: "목차"
 use_math: true
 
-categories: TPU, GPU, Deep learning
-tags: TPU, GPU, Deep learning
+categories: 
+  - Deep learning
+tags: 
+  - Deep learning
+  - TPU
+  - GPU
 last_modified_at: 2020-02-27
 ---
 
