--- a/_posts/2020-02-25-make-blog.md
+++ b/_posts/2020-02-25-make-blog.md
@@ -47,7 +47,7 @@ C:\\> ruby --version
 ruby 2.6.5p114 (2019-10-01 revision 67812)
 ```
 
-그럼 이제 ruby를 이용해서 Jekyll을 설치하자.
+그럼 이제 ruby를 이용해서 Jekyll을 설치하자. 
 
 ```bash
 C:\\> gem install jekyll bundle
@@ -58,8 +58,6 @@ C:\\> gem install jekyll bundle
 ```bash
 C:\\> jekyll --version
 ```
-
-일단 여기까지 하면 Jekyll은 설치가 끝난듯 하다. ~~그런데 Jekyll을 설치했는데 이걸로 뭘 하는건지 잘 모르겠다.~~ 나중에 repository와 연결하기 전에 다운 받은 테마 폴더에서 `bundle` 명령어를 실행해줘야 블로그 화면을 띄울 수 있다.
 
 ## 1.2. Mac에 Jekyll 설치하기
 Mac에서는 brew를 사용하여 설치할 수 있다. [참고](https://jekyllrb.com/docs/installation/macos/)
@@ -86,7 +84,7 @@ jekyll과 bundler를 설치하자.
 $ sudo gem install --user-install bundler jekyll
 ```
 
-## 1.3. Jekyll 테스트 하기
+## 1.3. Jekyll 테스트 하기 on Windows & Mac
 Jekyll을 설치한 후, Jekyll을 이용하여 웹페이지를 띄워보는 테스트를 하자. 처음에 블로그 만들기를 시작했을 때, Jekyll을 왜 사용하는지 몰랐지만 포스팅을 몇 번 하다보니 Jekyll의 필요성을 느끼게 되었다. Jekyll은 개인적으로 쉽게 생각했을 때, 디버깅 툴 정도가 되는 것 같다. Markdown은 VSCode나 다양한 툴들을 이용하여 미리보기를 할 수 있지만, YFM 포맷을 포함하여 Markdown을 html로 변환하여 GitHub에 push하기 전에 미리 확인해볼 수 있는 용도로 사용할 수 있다. 
 > Jekyll만을 이용해서도 블로그를 만들 수 있다고 한다. 하지만 그럴 경우 Jekyll을 계속 실행해 둘 서버가 필요하다. 이러한 불편함을 GitHub을 통해 블로그를 만듬으로써 해결할 수 있는 듯 하다. 
 
@@ -101,7 +99,51 @@ $ cd blog_test
 오류가 없다면 `http://127.0.0.1:4000`에 접속하면 다음과 같은 화면을 볼 수 있다.
 <img align='center' src="{{ site.url }}{{ site.baseurl }}/assets/images/1.make_blog/1_3_blog_test_page.png">
 
-나는 이 단계에서 다음의 오류가 발생하였다. 
+GitHub에 push하기 전 Jekyll을 이용하여 미리 확인하는 방법은 GitHub 블로그를 만든 후에 [2.6. Jekyll을 통해 미리보기](#2.6.-Jekyll을-통해-미리보기)에서 다뤄보도록 한다.  
+일단 여기까지 하면 Jekyll은 설치가 끝난듯 하다. ~~그런데 Jekyll을 설치했는데 이걸로 뭘 하는건지 잘 모르겠다.~~ 나중에 repository와 연결하기 전에 다운 받은 테마 폴더에서 `bundle` 명령어를 실행해줘야 블로그 화면을 띄울 수 있다.
+
+### 1.3.1 오류 및 해결 방법
+나는 `jekyll serve` 명령어를 테스트 하는 과정에서 윈도우와 Mac에서 각각의 오류가 발생하였다. 오류가 발생하지 않았다면 다음의 과정을 건너뛰어도 된다. 
+
+### 1.3.2 윈도우에서 발생한 오류
+
+```bash
+Dependency Error: Yikes! It looks like you don't have tzinfo or one of its dependencies installed. In order to use Jekyll as currently configured, you'll need to install this gem. If you've run Jekyll with `bundle exec`, ensure that you have included the tzinfo gem in your Gemfile as well. The full error message from Ruby is: 'cannot load such file -- tzinfo' If you run into trouble, you can find helpful resources at https://jekyllrb.com/help/!
+```
+
+오류의 내용을 간단히 살펴보면 `tzinfo`가 제대로 설치가 되지 않아 발생된 오류로 보인다. 따라서 다음의 명령어를 통해 `tzinfo`와 `tzinfo-data`를 설치해주자. 
+
+```
+gem install tzinfo tzinfo-data
+```
+
+위의 명령어로 `tzinfo`와 `tzinfo-data`를 설치해주고 `jekyll serve` 명령어를 실행하면 똑같은 Dependency Error가 발생할 것이다. 폴더 안에 있는 `Gemfile`의 끝에 다음의 두 줄을 추가해 주자.
+
+```
+gem "tzinfo"
+gem "tzinfo-data"
+```
+
+그리고 다시 `jekyll serve` 명령어를 실행해주면 제대로 실행되어 다음의 화면을 볼 수 있을 것이다. 
+
+```bash
+Configuration file: ~/_config.yml
+            Source: ~
+       Destination: ~/_site
+ Incremental build: disabled. Enable with --incremental
+      Generating...
+       Jekyll Feed: Generating feed for posts
+                    done in 1.295 seconds.
+  Please add the following to your Gemfile to avoid polling for changes:
+    gem 'wdm', '>= 0.1.0' if Gem.win_platform?
+ Auto-regeneration: enabled for ~
+    Server address: http://127.0.0.1:4000
+  Server running... press ctrl-c to stop.
+```
+
+`tzinfo-data`의 경우 윈도우 환경에만 필요하다고 한다([참고](https://github.com/jekyll/jekyll/issues/5935#issuecomment-284198548)). 따라서, Mac과 윈도우를 함께 사용하는 경우에는 Mac 환경에서 약간의 추가 설치가 필요하다. [1.3.4장 참고](#윈도우-설정-변경-후-Mac에서-발생한-오류).
+
+### 1.3.3 Mac에서 발생한 오류
 
 ``` bash
 Could not find rake-10.5.0 in any of the sources
@@ -114,8 +156,23 @@ Run `bundle install` to install missing gems.
 $ bundle install
 ```
 
-GitHub에 push하기 전 Jekyll을 이용하여 미리 확인하는 방법은 GitHub 블로그를 만든 후에 [2.6. Jekyll을 통해 미리보기](#2.6.-Jekyll을-통해-미리보기)에서 다뤄보도록 한다.
+### 1.3.4 윈도우 설정 변경 후 Mac에서 발생한 오류
 
+추가적으로, 나의 경우에는 블로그 파일 및 폴더를 공유 드라이브를 통해 공유하여 윈도우와 Mac에서 사용하고 있기 때문에 각각의 OS에서 `jekyll serve` 명령어를 실행할 수 있어야 한다.
+하지만 윈도우에서 `Gemfile`을 수정한 이유로 Mac에서 아래와 같은 오류가 발생하였다.
+
+```bash
+~
+/System/Library/Frameworks/Ruby.framework/Versions/2.6/usr/lib/ruby/2.6.0/bundler/resolver.rb:287:in `block in verify_gemfile_dependencies_are_found!': Could not find gem 'tzinfo-data' in any of the gem sources listed in your Gemfile. (Bundler::GemNotFound)
+```
+
+위의 오류를 해결하기 위해 Mac에도 `tzinfo-data`를 설치해주었다. 
+
+```bash
+gem install tzinfo-data
+```
+
+위와 같은 과정들을 통해 윈도우와 Mac 각각에서 `jekyll serve` 명령어가 작동하는 것을 확인하였다.
 
 ***
 # 2. GitHub 블로그 만들기
